// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu renders 1`] = `
<div>
  <p>
    Hvordan kom du deg hit?
  </p>
</div>
`;

exports[`MyPage renders 1`] = `
<div>
  <p>
    How did you even get here??
  </p>
</div>
`;
